[metadata]

name = ahk-json
version = 0.1.0rc1
author_email = spencer.young@spyoung.com
author = Spencer Young
description = Auto-Hotkey-JSON for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spyoungtech/ahk-json
keywords =
    ahk
    autohotkey
    jxon
    json
    python

license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Topic :: Desktop Environment
    Programming Language :: Python
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
python_requires = >=3.8.0
packages =
    ahk_json

install_requires =
    ahk

[options.package_data]
ahk_json =
    *.ahk
